--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,9 @@ a {
     font-family: 'Raleway_bold', Arial, sans-serif;
     font-size: 0.8rem;
     width: 16%;
+}
+input[type="search"] {
+    -webkit-appearance: none;
     border-radius: 0;
 }
 .search-bar input:focus {
